# bevy_2d_text

./: Cargo.toml  README.md
src/: camera.rs  main.rs
